--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.5",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.5.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
