--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "dev": "nodemon index"
+    "dev": "nodemon server"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-async-handler": "^1.1.4",
     "helmet": "^4.5.0",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
