--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
+    "express-rate-limit": "^5.2.6",
     "helmet": "^4.5.0",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.5",
     "morgan": "^1.10.0",
     "nodemailer": "^6.6.0",
-    "slugify": "^1.5.0",
     "validator": "^13.6.0"
   },
   "devDependencies": {
