--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-mongo-sanitize": "^2.0.2",
     "express-rate-limit": "^5.2.6",
     "helmet": "^4.5.0",
+    "hpp": "^0.2.3",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.5",
